v0.4
        * Added native filter and map methods to table and tuple.
        * Added a reduce method to tuple. (Peter Arthur)
        * Added a database library as sqlite3 binding. (Peter Arthur)
        * Fix installation from source without git
        * Fixed various SEGVs and minor errors and security issues.
        * Fixed cmp for string (Peter Arthur)

v0.3	Sat Oct 17 10:42:49 CEST 2015 rurban v0.3-g7963cbc-1264

	* Added new syntax tuple[index] for fast, unsafe array access,
	also for table with a string literal: table["key"]
	* Fixed comparison and equalness esp. for numbers. Check now also double
        values, before only int. All values are now compared strictly, numeric types
        are not promoted to match. i.e 0 != 0.0
	The jit now requires at least a x86 with sse2 (Pentium 4).
	* Changed the name Decimal in the API to Double
	* Promote integer to double on arithmetic overflow (gcc-5, clang-3.6 or a
        single jo insn in the jit)
	* Added seperate Double and Integer vtables, which are both of kind Number.
	Added specialized methods.
	* Added isa? and subclass? methods, re-enabled test/classes/creature.pn
	* string: improve performance of at and ord
	* Added more examples
	* Updated libuv from 0.11.23 to 1.0.0
        * New syntax error: Call empty message
	* Fixed size method for objects and primitives
	* Added parent and methods methods to the Lobby (Peter Arthur)

v0.2	Thu Sep 11 10:28:32 CDT 2014 rurban v0.2-0-ga280506-1153

        * print and say methods return "" instead of nil.
        * Added methods for table: clone, slice, keys, values.
	For tuple: slice. For bytes and string: clone.
	* Added support for negative arguments for string.slice
	* Changed API's for potion_type_error_want
	* Updated libuv from 0.11.14 to 0.11.23
	* Fixed uv_buf_t handling in aio
	* Added SANDBOX support: make SANDBOX=1
	  omit access to local filesystem, processes, loading shared libraries