@@ -748,7 +748,7 @@ void potion_lobby_init(Potion *P) {
   potion_method(P->lobby, "kind",  potion_lobby_kind, 0);
   potion_method(P->lobby, "isa?",  potion_lobby_isa, "value=o");
   potion_method(P->lobby, "srand", potion_srand, "seed=N");
-  potion_method(P->lobby, "rand",  potion_rand, 0);
+  potion_method(P->lobby, "rand",  potion_rand, "|bound=N");
   potion_method(P->lobby, "self",  potion_lobby_self, 0);
   potion_method(P->lobby, "string", potion_lobby_string, 0);
   potion_method(P->lobby, "can",   potion_lobby_can, "method=S");
