@@ -859,7 +859,7 @@ PN potion_strtod(Potion *, char *, int);
 PN potion_num_pow(Potion *, PN, PN, PN);
 PN potion_num_rand(Potion *, PN, PN);
 PN potion_srand(Potion *, PN, PN, PN);
-PN potion_rand(Potion *, PN, PN);
+PN potion_rand(Potion *, PN, PN, PN);
 PN potion_sig_at(Potion *, PN, int);
 PN potion_sig_name_at(Potion *, PN, int);
 int potion_sig_arity(Potion *, PN);
